syntax = "proto3";

option csharp_namespace = "ProductService";

import "google/type/money.proto";
import "google/protobuf/Empty.proto";

service ProductService
{
	rpc GetProduct (GetProductRequest) returns (GetProductRespone);
	rpc GetProducts (google.protobuf.Empty) returns (GetProductsRespone);
	rpc CreateProduct (CreateProductRequest) returns (OperationStatusResponse);
	rpc UpdateProduct (UpdateProductRequest) returns (OperationStatusResponse);
	rpc DeleteProduct (DeleteProductRequest) returns (OperationStatusResponse);
}

message GetProductRequest
{
	int32 id = 1;
}

message CreateProductRequest
{
	ProductInfo product = 1;
}

message UpdateProductRequest
{
	int32 id = 1;
	ProductInfo product = 2;
}

message DeleteProductRequest
{
	int32 id = 1;
	ProductInfo product = 2;
}

message GetProductRespone
{
	OperationStatusResponse status = 1;
	ProductInfo product = 2;
}
	
message GetProductsRespone
{
	repeated ProductInfo products = 1;
}

message OperationStatusResponse
{
	bool status = 1;
}

message ProductInfo
{
	string name = 1;
	string description = 2;
	google.type.Money price = 3;
	int32 stock = 4;
}